--- a/docs/CLI_Reference/index.mdx
+++ b/docs/CLI_Reference/index.mdx
@@ -36,23 +36,23 @@ Use "oras [command] --help" for more information about a command.
 
 ## See also
 
-* [oras attach](0_oras_attach.md)	 - Attach files to an existing artifact
+* [oras attach](oras_attach)	 - Attach files to an existing artifact
 * oras blob - Blob operations
-    * [oras blob delete](1_oras_blob_delete.md)	 - Delete a blob from a remote registry
-    * [oras blob fetch](2_oras_blob_fetch.md)	 - Fetch a blob from a remote registry
-    * [oras blob push](3_oras_blob_push.md)	 - Push a blob to a remote registry
-    * [oras copy](4_oras_copy.md)	 - Copy artifacts from one target to another
-* [oras discover](5_oras_discover.md)	 - Discover referrers of a manifest in the remote registry
-* [oras login](oras_login.md)	 - Log in to a remote registry
-* [oras logout](oras_logout.md)	 - Log out from a remote registry
+    * [oras blob delete](oras_blob_delete)	 - Delete a blob from a remote registry
+    * [oras blob fetch](oras_blob_fetch)	 - Fetch a blob from a remote registry
+    * [oras blob push](oras_blob_push)	 - Push a blob to a remote registry
+    * [oras copy](oras_copy)	 - Copy artifacts from one target to another
+* [oras discover](oras_discover)	 - Discover referrers of a manifest in the remote registry
+* [oras login](oras_login)	 - Log in to a remote registry
+* [oras logout](oras_logout)	 - Log out from a remote registry
 * oras manifest - Manifest operations
-    * [oras manifest delete](oras_manifest_delete.md)	 - Delete a manifest from a remote registry
-    * [oras manifest fetch-config](oras_manifest_fetch-config.md)	 - Fetch the config of a manifest from a remote registry
-    * [oras manifest fetch](oras_manifest_fetch.md)	 - Fetch manifest of the target artifact
-    * [oras manifest push](oras_manifest_push.md)	 - Push a manifest to a remote registry
-* [oras pull](oras_pull.md)	 - Pull files from a remote registry
-* [oras push](oras_push.md)	 - Push files to a remote registry
-* [oras repository](oras_repository.md)	 - Repository operations
-* [oras tag](oras_tag.md)	 - Tag a manifest in the remote registry
-* [oras version](oras_version.md)	 - Show ORAS CLI version
+    * [oras manifest delete](oras_manifest_delete)	 - Delete a manifest from a remote registry
+    * [oras manifest fetch-config](oras_manifest_fetch-config)	 - Fetch the config of a manifest from a remote registry
+    * [oras manifest fetch](oras_manifest_fetch)	 - Fetch manifest of the target artifact
+    * [oras manifest push](oras_manifest_push)	 - Push a manifest to a remote registry
+* [oras pull](oras_pull)	 - Pull files from a remote registry
+* [oras push](oras_push)	 - Push files to a remote registry
+* [oras repository](oras_repository)	 - Repository operations
+* [oras tag](oras_tag)	 - Tag a manifest in the remote registry
+* [oras version](oras_version)	 - Show ORAS CLI version
 
