update all docs

--- a/docs/CLI/developer_guide.mdx
+++ b/docs/CLI/developer_guide.mdx
@@ -78,7 +78,11 @@ To update or add new dependencies, run `go get <package name>`.
 
 ## Release checklist
 
-*Note: this section needs a lot of love and automation* 🙂
+:::info
+
+This section needs a lot of love and automation 🙂
+
+:::
 
 1. Make sure your GPG is available on GitHub at `https://github.com/<username>.gpg`. This can be added at https://github.com/settings/keys
 1. If you haven't already, open PR to add your GPG key to the [`KEYS`](https://github.com/oras-project/oras/blob/main/KEYS) file (see file for instructions)
