--- a/docs/CLI/authentication.mdx
+++ b/docs/CLI/authentication.mdx
@@ -9,7 +9,11 @@ Run `oras login` in advance for any private registries. By default, this will st
 
 Use the `-c`/`--config` option to specify an alternate location.
 
-> While ORAS leverages the local docker client config store, ORAS does NOT have a dependency on Docker Desktop running or being installed. ORAS can be used independently of a local docker daemon.
+:::info
+
+While ORAS leverages the local docker client config store, ORAS does NOT have a dependency on Docker Desktop running or being installed. ORAS can be used independently of a local docker daemon.
+
+:::
 
 `oras` also accepts explicit credentials via options, for example,
 
