--- a/docs/CLI_Reference/oras_manifest_delete.mdx
+++ b/docs/CLI_Reference/oras_manifest_delete.mdx
@@ -1,35 +1,41 @@
 ---
-title: oras blob delete
-sidebar_position: 2
+title: oras manifest delete
+sidebar_position: 9
 ---
 
-# oras blob delete
+# oras manifest delete
 
-Delete a blob from a remote registry.
+Delete a manifest from remote registry.
 
 ```bash
-oras blob delete [flags] <name>@<digest>
+oras manifest delete [flags] <name>{:<tag>|@<digest>}
 ```
 
 ## Examples
 
-Delete a blob:
+Delete a manifest tagged with 'v1' from repository 'localhost:5000/hello':
 
 ```bash
-oras blob delete localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
+  oras manifest delete localhost:5000/hello:v1
 ```
 
-Delete a blob without prompting confirmation:
+Delete a manifest without prompting confirmation:
 
 ```bash
-oras blob delete --yes localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
+  oras manifest delete --force localhost:5000/hello:v1
 ```
 
-Delete a blob and print its descriptor:
+Delete a manifest and print its descriptor:
 
 ```bash
-oras blob delete --descriptor --yes localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
-```  
+  oras manifest delete --descriptor localhost:5000/hello:v1
+```
+
+Delete a manifest by digest 'sha256:99e4703fbf30916f549cd6bfa9cdbab614b5392fbe64fdee971359a77073cdf9' from repository 'localhost:5000/hello':
+
+```bash
+  oras manifest delete localhost:5000/hello@sha:99e4703fbf30916f549cd6bfa9cdbab614b5392fbe64fdee971359a77073cdf9
+```
 
 ## Options
 
@@ -37,6 +43,7 @@ oras blob delete --descriptor --yes localhost:5000/hello@sha256:9a201d228ebd9662
       --ca-file string                             server certificate authority file for the remote registry
   -d, --debug                                      debug mode
       --descriptor                                 output the descriptor
+      --distribution-spec string                   [Preview] set OCI distribution spec version and API option for target. options: v1.1-referrers-api, v1.1-referrers-tag
   -f, --force                                      ignore nonexistent references, never prompt
   -H, --header stringArray                         add custom headers to requests
   -h, --help                                       help for delete
@@ -50,4 +57,3 @@ oras blob delete --descriptor --yes localhost:5000/hello@sha256:9a201d228ebd9662
   -u, --username string                            registry username
   -v, --verbose                                    verbose output
 ```
-
