--- a/docs/CLI_Reference/oras_repo_ls.mdx
+++ b/docs/CLI_Reference/oras_repo_ls.mdx
@@ -1,53 +1,50 @@
 ---
-title: oras blob delete
-sidebar_position: 2
+title: oras repo ls
+sidebar_position: 15
 ---
 
-# oras blob delete
+# oras repo ls
 
-Delete a blob from a remote registry.
+List the repositories under the registry.
 
 ```bash
-oras blob delete [flags] <name>@<digest>
+oras repo ls [flags] <registry>
 ```
 
 ## Examples
 
-Delete a blob:
+Example - List the repositories under the registry:
 
 ```bash
-oras blob delete localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
+oras repo ls localhost:5000
 ```
 
-Delete a blob without prompting confirmation:
+Example - List the repositories under a namespace in the registry:
 
 ```bash
-oras blob delete --yes localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
+oras repo ls localhost:5000/example-namespace
 ```
 
-Delete a blob and print its descriptor:
+Example - List the repositories under the registry that include values lexically after last:
 
 ```bash
-oras blob delete --descriptor --yes localhost:5000/hello@sha256:9a201d228ebd966211f7d1131be19f152be428bd373a92071c71d8deaf83b3e5
-```  
+oras repo ls --last "last_repo" localhost:5000
+```
 
 ## Options
 
-```
+```bash
       --ca-file string                             server certificate authority file for the remote registry
   -d, --debug                                      debug mode
-      --descriptor                                 output the descriptor
-  -f, --force                                      ignore nonexistent references, never prompt
   -H, --header stringArray                         add custom headers to requests
-  -h, --help                                       help for delete
+  -h, --help                                       help for ls
       --insecure                                   allow connections to SSL registry without certs
+      --last last                                  start after the repository specified by last
   -p, --password string                            registry password or identity token
       --password-stdin                             read password or identity token from stdin
       --plain-http                                 allow insecure connections to registry without SSL check
-      --pretty                                     prettify JSON objects printed to stdout
       --registry-config path                       path of the authentication file for registry
       --resolve host:port:address[:address_port]   customized DNS for registry, formatted in host:port:address[:address_port]
   -u, --username string                            registry username
   -v, --verbose                                    verbose output
 ```
-
