--- a/docs/Client_Libraries/rust.mdx
+++ b/docs/Client_Libraries/rust.mdx
@@ -5,6 +5,10 @@ sidebar_position: 3
 
 # Rust
 
-🚧 *Note: Rust client library currently in progress! Contributions welcome!*
+:::note
+
+🚧 Rust client library currently in progress! Contributions welcome!
+
+:::
 
 Source code: [github.com/oras-project/oras-rs](https://github.com/oras-project/oras-rs)
