--- a/blog/2023-03-24-welcome-new-oras-owners/index.mdx
+++ b/blog/2023-03-24-welcome-new-oras-owners/index.mdx
@@ -9,6 +9,8 @@ tags: [oras, community]
 
 With a supermajority vote from the existing ORAS Organization Owners, we are excited to announce that [Terry Howe](https://github.com/TerryHowe) and [Andrew Block](https://github.com/sabre1041) have been accepted as new ORAS Organization owners. In addition, [Billy Zha](https://github.com/qweeah) and [Feynman Zhou](https://github.com/feynmanzhou) been accepted as ORAS subproject maintainers.
 
+<!--truncate-->
+
 Terry has been actively contributing to ORAS since Dec 2022 and has been nominated to a sub-project maintainer on Feb 21. He raised 19 PRs to multiple ORAS repositories includes ORAS CLI, ORAS-go, and ORAS-www in the last quarter. He also reviewed Pull Request actively and left 126 comments in the same period. 
 
 Andrew worked frequently with the ORAS community members to build functionality into the v1 branch for which Helm makes use of as well as to provide test coverage and features to the current v2 main branch. He also saw how the capabilities produced by ORAS could be used outside of the Helm ecosystem, such as in [Emporous](https://emporous.io) (formerly called Universal Object Reference UOR) as a way to manage content within OCI registries. He also contributed to several features and bug fixes for ORAS-go.
